--- a/Onn-4/Javascript/skilaverkefni_2/canvas.html
+++ b/Onn-4/Javascript/skilaverkefni_2/canvas.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
+    <div class="score">
+        <p>Score: </p>
+    </div>
     <canvas id="tutorial" width="150" height="150"></canvas>
     <script src="app.js"></script>
 </html>
